[gd_scene load_steps=5 format=3 uid="uid://fd3xmnc047tm"]

[ext_resource type="Script" uid="uid://dx5iawpcgwhlm" path="res://ui/screens/credit-screen/credit_screen.gd" id="1_h6a2t"]
[ext_resource type="Theme" uid="uid://hheneshfv1b2" path="res://ui/themes/your_theme.tres" id="2_dvsi5"]

[sub_resource type="LabelSettings" id="LabelSettings_cutkl"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_r8dx7"]
font_size = 12

[node name="CreditScreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dvsi5")
script = ExtResource("1_h6a2t")
credits = "res://ui/screens/credit-screen/credits.json"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="LabelCredits" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(731.345, 0)
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Credits"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 27.17)
layout_mode = 2

[node name="LabelCreatedBy" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Created by You"
label_settings = SubResource("LabelSettings_cutkl")
horizontal_alignment = 1

[node name="LabelSpecialThanks" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Special thanks to Also You"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Godot3PCredits" type="Label" parent="VBoxContainer/ScrollContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
label_settings = SubResource("LabelSettings_r8dx7")

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Return to Main Menu
"

[node name="DetailedGCredits" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 12
text = "Show detailed Godot Credits"
flat = true

[node name="LicenseText" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("2_dvsi5")

[node name="VBoxContainer" type="VBoxContainer" parent="LicenseText"]
layout_mode = 2

[node name="Label" type="Label" parent="LicenseText/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_dvsi5")
theme_type_variation = &"HeaderMedium"

[node name="ScrollContainer" type="ScrollContainer" parent="LicenseText/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="LicenseText/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="CloseLicense" type="Button" parent="LicenseText/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Close"

[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="DetailedGCredits" to="." method="_on_detailed_g_credits_pressed"]
[connection signal="pressed" from="LicenseText/VBoxContainer/CloseLicense" to="." method="_on_close_licence_text_pressed"]
